# kindle-screenshot-ocr

./: Makefile  README.md  ocr.py  pyproject.toml
